# deepseek-speciale

./: .gitignore  README.md  deepseek_speciale.py  install.sh  pyproject.toml
